# future

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  future.desktop  main.cpp
.github/workflows/: main.yml
CMake/: FindOpus.cmake  FindOpusenc.cmake  Packaging.cmake
assets/: font-base-multi.xml  font-base.xml  image-credits.txt  sample-base.xml  seq-base.xml
utils/: CRC64.cpp  CRC64.h  MappedFile.cpp  MappedFile.h  archive.cpp  archive.h  filebox.cpp  filebox.h  font.cpp  font.h  images.cpp  images.h  mpq_archive.cpp  mpq_archive.h  style.cpp  style.h  threadSafeQueue.h  xml_embed.h  zip_archive.cpp  zip_archive.h
windows/: CreateArchive.cpp  CreateArchive.h  CreateFromDir.cpp  CreateFromDir.h  CustomAudio.cpp  CustomAudio.h  CustomSequencedAudio.cpp  CustomSequencedAudio.h  CustomSoundFontWindow.cpp  CustomSoundFontWindow.h  CustomStreamedAudio.cpp  CustomStreamedAudio.h  ExploreArchive.cpp  ExploreArchive.h  MainWindow.cpp  MainWindow.h  WindowBase.h  WindowMgr.cpp  WindowMgr.h
